sem-1-week-10 path fix

--- a/semester-1/week-10.html
+++ b/semester-1/week-10.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>A-I: S1-W10</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles.css">
+
     <base href="/algorithmic-identities/">
+
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -33,21 +35,22 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="/semester-1/week-10.html" class="active"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="semester-1/week-10.html" class="active"><strong>W10</strong> : Task-Based
+                                Making</a></li>
+                        <li><a href="semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -58,15 +61,15 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="/semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="semester-2/week-3.html"><strong>W3</strong> : GDI Interview & P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -86,7 +89,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/listening-post.jpeg" alt="">
+                <img src="assets/images/listening-post.jpeg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>The Listening Post</strong><em>
                         Ben Rubin and Mark Hanson</em></figcaption>
             </section>
@@ -122,7 +125,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="/assets/images/comparison.png" alt=""
+                <img src="assets/images/comparison.png" alt=""
                     style="object-fit: contain; transform: scale(0.8); margin-top: 50px; margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Comparison of Task Experiment &
                         Google's Quick, Draw!</strong></figcaption>
@@ -168,7 +171,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="/assets/images/w10-1.jpg" alt="">
+                <img src="assets/images/w10-1.jpg" alt="">
                 <figcaption style="font-size: 12px; text-align: left;"><strong>DIA X NIKE Basketball</strong><em>
                         Kinetic Typography</em></figcaption>
             </section>
@@ -181,7 +184,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <img src="/assets/images/modular.png" alt="" style="margin-bottom: 25px;"></img>
+                        <img src="assets/images/modular.png" alt="" style="margin-bottom: 25px;"></img>
                         <figcaption style="font-size: 12px; text-align: center;">
                             <strong>Modular Thinking</strong><em> Diagram</em>
                         </figcaption>
@@ -215,7 +218,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="/assets/images/text-box copy.png" alt=""
+                <img src="assets/images/text-box copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Text Box High Fidelity
                         Mockup</strong><em>
@@ -257,7 +260,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-270px;">
-                <img src="/assets/images/response-form copy.png" alt=""
+                <img src="assets/images/response-form copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Response Form High Fidelity
                         Mockup</strong><em>
@@ -294,7 +297,7 @@
 
                 <div class="exp-block">
                     <div class="exp-block" style="overflow:hidden;">
-                        <img src="/assets/images/nodejs.png" alt=""
+                        <img src="assets/images/nodejs.png" alt=""
                             style="margin-top: -50px; margin-bottom: -45px; object-fit: contain;"></img>
                     </div>
                     <p>In one of CiD's workshops, we learnt about Node.js. Since my experiment collects responses from
@@ -332,7 +335,7 @@
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full" style="margin-top:-250px;">
-                <img src="/assets/images/project-structure copy.png" alt=""
+                <img src="assets/images/project-structure copy.png" alt=""
                     style="object-fit: contain; transform: scale(0.5); margin-bottom: -80px;">
                 <figcaption style="font-size: 12px; text-align: center;"><strong>Project Structure</strong><em>
                         VS Code</em></figcaption>
@@ -440,10 +443,10 @@
             <!-- ROW — SPLIT WITH TWO IMAGES -->
             <section class="exp-row split" style="margin-bottom: 17px;">
                 <div class="exp-block">
-                    <img src="/assets/images/room-of-change-2.jpeg" alt="">
+                    <img src="assets/images/room-of-change-2.jpeg" alt="">
                 </div>
                 <div class="exp-block">
-                    <img src="/assets/images/room-of-change-3.jpeg" alt="">
+                    <img src="assets/images/room-of-change-3.jpeg" alt="">
                 </div>
             </section>
 
@@ -451,7 +454,7 @@
             <section class="exp-row full">
                 <a href="https://giorgialupi.com/the-room-of-change" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="/assets/images/room-of-change-hero.jpeg" alt="">
+                    <img src="assets/images/room-of-change-hero.jpeg" alt="">
                     <figcaption style="font-size: 12px; text-align: left;">
                         <strong>The Room of Change</strong><em> Giorgia Lupi 2019</em>
                     </figcaption>
@@ -510,7 +513,7 @@
             <section class="exp-row full">
                 <a href="https://giorgialupi.com/the-room-of-change" target="_blank"
                     style="text-decoration: none; color: inherit;">
-                    <img src="/assets/images/room-of-change-sketch.jpeg" alt="" style="object-fit: contain;">
+                    <img src="assets/images/room-of-change-sketch.jpeg" alt="" style="object-fit: contain;">
                     <figcaption style="font-size: 12px; text-align: center;">
                         <strong>The Room of Change</strong><em> Exhibition Space Sketch</em>
                     </figcaption>
@@ -544,10 +547,10 @@
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
-                <div class="exp-block"><img src="/assets/images/roc-1.png"></div>
-                <div class="exp-block"><img src="/assets/images/roc-2.png"></div>
-                <div class="exp-block"><img src="/assets/images/roc-3.png"></div>
-                <div class="exp-block"><img src="/assets/images/roc-4.png"></div>
+                <div class="exp-block"><img src="assets/images/roc-1.png"></div>
+                <div class="exp-block"><img src="assets/images/roc-2.png"></div>
+                <div class="exp-block"><img src="assets/images/roc-3.png"></div>
+                <div class="exp-block"><img src="assets/images/roc-4.png"></div>
             </section>
 
             <!-- BOTTOM-RIGHT FLOATING NAV BUTTONS -->
@@ -564,15 +567,20 @@
 
 
     <!-- ACCORDION SCRIPT -->
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+
+            /* -----------------------------
+               1) LEFT NAV ACCORDION TOGGLES
+            ------------------------------ */
             document.querySelectorAll(".overview-group").forEach(group => {
                 const toggleBtn = group.querySelector(".nav-toggle");
                 const symbol = group.querySelector(".nav-toggle-symbol");
 
                 if (!toggleBtn || !symbol) return;
 
-                // init closed
+                // default closed
                 group.classList.remove("is-open");
                 toggleBtn.setAttribute("aria-expanded", "false");
                 symbol.textContent = "+";
@@ -583,58 +591,63 @@
                     symbol.textContent = isOpen ? "−" : "+";
                 });
             });
-        });
-    </script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
 
-            // Match /semester-1/week-1.html, /semester-1/week-2.html, etc.
-            const m = window.location.pathname.match(/week-(\d+)\.html$/);
-            const current = m ? parseInt(m[1], 10) : 1;
-
+            /* -----------------------------
+               2) BOTTOM-RIGHT WEEK NAV
+            ------------------------------ */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
             const topBtn = document.getElementById("topBtn");
 
-            if (prev) {
-                prev.addEventListener("click", () => {
-                    if (current > 1) {
-                        window.location.href = `week-${current - 1}.html`; // stays in semester-1 folder
-                    }
-                });
-            }
-
-            if (next) {
-                next.addEventListener("click", () => {
-                    window.location.href = `week-${current + 1}.html`;
-                });
-            }
-
+            // Scroll to top
             if (topBtn) {
                 topBtn.addEventListener("click", () => {
                     window.scrollTo({ top: 0, behavior: "smooth" });
                 });
             }
 
-        });
+            // Detect semester + week from URL
+            // Works with GitHub Pages paths like:
+            // /algorithmic-identities/semester-1/week-15.html
+            const path = window.location.pathname;
+            const match = path.match(/semester-(\d+)\/week-(\d+)\.html$/);
 
-        /* Scroll to top */
-        document.getElementById("topBtn").addEventListener("click", () => {
-            window.scrollTo({ top: 0, behavior: "smooth" });
-        });
+            // If this page is NOT a week page, just stop here.
+            if (!match) return;
 
-        const group = document.querySelector(".overview-group");
-        const btn = document.getElementById("overviewToggle");
-        const symbol = document.getElementById("overviewSymbol");
+            const semester = parseInt(match[1], 10);
+            const currentWeek = parseInt(match[2], 10);
 
-        btn.setAttribute("aria-expanded", "false");
-        symbol.textContent = "+";
+            // Set last week per semester (edit SEM 2 when ready)
+            const LAST_WEEK_BY_SEMESTER = {
+                1: 15,
+                2: 15
+            };
+            const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
 
-        btn.addEventListener("click", () => {
-            const isOpen = group.classList.toggle("is-open");
-            btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-            symbol.textContent = isOpen ? "−" : "+";
+            // Prev button
+            if (prev) {
+                if (currentWeek <= 1) {
+                    prev.style.display = "none";
+                } else {
+                    prev.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek - 1}.html`;
+                    });
+                }
+            }
+
+            // Next button
+            if (next) {
+                if (currentWeek >= lastWeek) {
+                    next.style.display = "none";
+                } else {
+                    next.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek + 1}.html`;
+                    });
+                }
+            }
+
         });
     </script>
 
