sem-1-week-13 image path fix

--- a/semester-1/week-13.html
+++ b/semester-1/week-13.html
@@ -157,10 +157,10 @@
             <!-- 3 COLUMNS -->
             <section class="exp-row cols-3" style="margin-bottom: 20px;">
                 <div class="exp-block">
-                    <img src="assets/images/w13-5.JPG">
+                    <img src="assets/images/w13-5.jpg">
                 </div>
                 <div class="exp-block">
-                    <img src="assets/images/w13-3.JPG">
+                    <img src="assets/images/w13-3.jpg">
                 </div>
                 <div class="exp-block">
                     <img src="assets/images/w13-6.jpg">
