sem-2-week-3 path fix

--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <title>A-I: S2-W3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles.css">
+
+    <base href="/algorithmic-identities/">
+
+    <link rel="icon" href="favicon.png" />
+    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
 </head>
 
 <body>
@@ -16,7 +19,7 @@
         <!-- FIXED LEFT NAV BAR -->
         <aside class="left-rail">
             <div class="site-title-block">
-                <div class="site-kicker"><a href="/index.html">A-I: Algorithmic Identities</a></div>
+                <div class="site-kicker"><a href="index.html">A-I: Algorithmic Identities</a></div>
                 <p class="site-description">
                     A design-research project exploring how our digital identities are co-constructed by algorithms,
                     shaping who we become online.
@@ -32,21 +35,21 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
-                        <li><a href="/semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
-                        <li><a href="/semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
-                        <li><a href="/semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
-                        <li><a href="/semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
-                        <li><a href="/semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
-                        <li><a href="/semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
-                        <li><a href="/semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
-                        <li><a href="/semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
-                        <li><a href="/semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
-                        <li><a href="/semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
-                        <li><a href="/semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="/semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
-                        <li><a href="/semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
-                        <li><a href="/semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
+                        <li><a href="semester-1/week-1.html"><strong>W1</strong> : Prologue</a></li>
+                        <li><a href="semester-1/week-2.html"><strong>W2</strong> : Atelier Presentation</a></li>
+                        <li><a href="semester-1/week-3.html"><strong>W3</strong> : Mindmap & E-1</a></li>
+                        <li><a href="semester-1/week-4.html"><strong>W4</strong> : RPO Plan & P-1</a></li>
+                        <li><a href="semester-1/week-5.html"><strong>W5</strong> : RPO Consult & RE-1</a></li>
+                        <li><a href="semester-1/week-6.html"><strong>W6</strong> : RPO Peer Reviews</a></li>
+                        <li><a href="semester-1/week-7.html"><strong>W7</strong> : Formative Assessment</a></li>
+                        <li><a href="semester-1/week-8.html"><strong>W8</strong> : E-2</a></li>
+                        <li><a href="semester-1/week-9.html"><strong>W9</strong> : ASM & AxiDraw</a></li>
+                        <li><a href="semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
+                        <li><a href="semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
+                        <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
+                        <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
+                        <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
+                        <li><a href="semester-1/week-15.html"><strong>W15</strong> : E- 7 & P-4</a></li>
                     </ul>
                 </div>
 
@@ -57,15 +60,16 @@
                     </button>
 
                     <ul class="overview-weeks">
-                        <li><a href="/semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
-                        <li><a href="/semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
-                        <li><a href="/semester-2/week-3.html" class="active"><strong>W3</strong> : GDI Interview & P-6</a></li>
+                        <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
+                        <li><a href="semester-2/week-2.html"><strong>W2</strong> : DISS Consult & P-5</a></li>
+                        <li><a href="semester-2/week-3.html" class="active"><strong>W3</strong> : GDI Interview &
+                                P-6</a></li>
                     </ul>
                 </div>
 
-                <div class="nav-group"><a class="nav-link" href="/catalogue.html">Catalogue of Making</a></div>
-                <div class="nav-group"><a class="nav-link" href="/repository.html">Repository</a></div>
-                <div class="nav-group"><a class="nav-link" href="/about.html">About</a></div>
+                <div class="nav-group"><a class="nav-link" href="catalogue.html">Catalogue of Making</a></div>
+                <div class="nav-group"><a class="nav-link" href="repository.html">Repository</a></div>
+                <div class="nav-group"><a class="nav-link" href="about.html">About</a></div>
             </nav>
 
             <div class="left-rail-footer">
@@ -170,13 +174,17 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+
+            /* -----------------------------
+               1) LEFT NAV ACCORDION TOGGLES
+            ------------------------------ */
             document.querySelectorAll(".overview-group").forEach(group => {
                 const toggleBtn = group.querySelector(".nav-toggle");
                 const symbol = group.querySelector(".nav-toggle-symbol");
 
                 if (!toggleBtn || !symbol) return;
 
-                // init closed
+                // default closed
                 group.classList.remove("is-open");
                 toggleBtn.setAttribute("aria-expanded", "false");
                 symbol.textContent = "+";
@@ -187,49 +195,63 @@
                     symbol.textContent = isOpen ? "−" : "+";
                 });
             });
-        });
-    </script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
 
-            /* Get current week number from filename */
-            const current = parseInt(window.location.pathname.match(/week(\d+)\.html/)[1]);
 
-            /* Assign previous & next */
+            /* -----------------------------
+               2) BOTTOM-RIGHT WEEK NAV
+            ------------------------------ */
             const prev = document.getElementById("prevWeek");
             const next = document.getElementById("nextWeek");
+            const topBtn = document.getElementById("topBtn");
 
-            /* Load previous week if exists */
-            prev.addEventListener("click", () => {
-                if (current > 1) {
-                    window.location.href = `week${current - 1}.html`;
+            // Scroll to top
+            if (topBtn) {
+                topBtn.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+            }
+
+            // Detect semester + week from URL
+            // Works with GitHub Pages paths like:
+            // /algorithmic-identities/semester-1/week-15.html
+            const path = window.location.pathname;
+            const match = path.match(/semester-(\d+)\/week-(\d+)\.html$/);
+
+            // If this page is NOT a week page, just stop here.
+            if (!match) return;
+
+            const semester = parseInt(match[1], 10);
+            const currentWeek = parseInt(match[2], 10);
+
+            // Set last week per semester (edit SEM 2 when ready)
+            const LAST_WEEK_BY_SEMESTER = {
+                1: 15,
+                2: 3
+            };
+            const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
+
+            // Prev button
+            if (prev) {
+                if (currentWeek <= 1) {
+                    prev.style.display = "none";
+                } else {
+                    prev.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek - 1}.html`;
+                    });
                 }
-            });
+            }
 
-            /* Load next week if exists (assuming week12 max) */
-            next.addEventListener("click", () => {
-                if (current < 12) {
-                    window.location.href = `week${current + 1}.html`;
+            // Next button
+            if (next) {
+                if (currentWeek >= lastWeek) {
+                    next.style.display = "none";
+                } else {
+                    next.addEventListener("click", () => {
+                        window.location.href = `semester-${semester}/week-${currentWeek + 1}.html`;
+                    });
                 }
-            });
+            }
 
-            /* Scroll to top */
-            document.getElementById("topBtn").addEventListener("click", () => {
-                window.scrollTo({ top: 0, behavior: "smooth" });
-            });
-
-            const group = document.querySelector(".overview-group");
-            const btn = document.getElementById("overviewToggle");
-            const symbol = document.getElementById("overviewSymbol");
-
-            btn.setAttribute("aria-expanded", "false");
-            symbol.textContent = "+";
-
-            btn.addEventListener("click", () => {
-                const isOpen = group.classList.toggle("is-open");
-                btn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-                symbol.textContent = isOpen ? "−" : "+";
-            });
         });
     </script>
 
