sem-2-week-1-2 update v1

--- a/semester-2/week-3.html
+++ b/semester-2/week-3.html
@@ -84,75 +84,45 @@
         <main class="right-panel">
 
             <section class="catalogue-sidebar">
-                <h1><strong>Week 3</strong> / Prologue</h1>
+                <h1><strong>Week 3</strong> / P-6 & GDI Interview</h1>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Beginning of the Trajectory</strong></h3>
+                    <h3><strong>Prototype 6</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <p>There is one app that captivates millions daily. Can you guess what app that is? It's TikTok.
-                        <br><br>In
-                        Year 2, I explored this phenomenon in my academic essay <strong><em>"TikTok as Contemporary
-                                Media
-                                Spectacle"</em></strong>. I analysed TikTok through three aspects:
-                    </p>
-                    <p>
-                        <strong>⑴ Algorithmic Control:</strong> shapes feeds and fuel filter bubbles, misinformation,
-                        and viral trends<br>
-                        <strong>⑵ Mediated Reality:</strong> curated content and livestreams blur the line between real
-                        and hyperreal<br>
-                        <strong>⑶ Alienation:</strong> users commodify their identities and chase idealised personas at
-                        the expense of authenticity
-                    </p>
-                    <p>While writing this paper, I started to see how with the constant exposure of media, it causes us
-                        to be trapped in a mediated environment that is controlled by <strong>algorithms</strong>,
-                        proving that the social media apps we use are not just a platform. It is a powerful
-                        manifestation of the media spectacle in our digital age.</p>
+                    <p>This week marked a significant milestone as I was shortlisted for GDI after being selected by
+                        lecturers to submit a critical essay. Following this, I attended an interview with our school's
+                        <strong>Dean, Nur</strong>.</p>
+                    <p>The interview provided an opportunity to articulate my research interests, how my project is
+                        going, while reflecting how I can further improve or explore it. I received valuable,
+                        insightful, and encouraging feedback from Nur.</p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <img src="assets/images/media-spectacle.jpg" alt="">
-                <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
-                        Guy Debord, 1973</em></figcaption>
+                <img src="assets/images/w3-p6.jpg" alt="" style="object-fit:cover;">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>Prototype 6</strong><em>
+                        Screen Capture</em></figcaption>
             </section>
 
-            <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
+            <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
-                <!-- VIDEO BLOCK -->
-                <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
-                    <div style="flex:1; overflow:hidden;">
-                        <video src="assets/videos/w1-1.mp4" autoplay loop muted playsinline
-                            style="width:100%; height:100%; object-fit:cover; transform:scale(1.1);">
-                        </video>
-                    </div>
-                    <figcaption style="font-size:12px; margin-top:10px;">
-                        <strong>The Social Dilemma</strong> <em>Netflix, 2020</em>
-                    </figcaption>
+                <div class="exp-block">
+                    <h3><strong>Dean's Feedback</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <h2><strong>if(time==3am){emo_time();}</strong></h2>
-                    <p>Before bed, I always end up scrolling TikTok. Over time, I noticed a pattern: late at night, my
-                        feed shifts into heavier, more emotional content. It showed me videos that are more reflective
-                        or personal. However, during the day, the difference is constrasting. The same feed becomes
-                        energetic, loud, and comedic. It feels like the algorithm knows me a little too well, as it if
-                        knows exactly how I feel in that moment.</p>
-                    <p>It made me wonder: <strong><em>how does my feed know exactly how I feel?</em></strong> The timing
-                        is uncanny. Sometimes the continuous scrolling and consumption of the videos push me deeper into
-                        an existential spiral. Even on Instagram, I can talk to my friends about something in person,
-                        and suddenly it appears on my feed as an ad. The more it happens, the more it felt like the
-                        platforms are <strong>sensing, predicting, and responding</strong> to my emotional state in ways
-                        I <em>never explicitly shared</em>.</p>
-                    <p>
-                        This critical reflection sparked my drive to intern at TikTok, allowing me to work closer with
-                        the product itself, and to deepen my understanding of the algorithmic influence. <br><br>With
-                        that, this research project <strong>"A-I: Algorithmic Identities"</strong> was born.
+                    <h3><strong>➀ WORLD → NUMBER → LABEL</strong></h3>
+                    <p>Over the holidays, I received detailed feedback from my lecturers on both my dissertation and
+                        graduation project. This week's consultation provided an opportunity to revisit these comments
+                        together and unpack them more clearly. Through discussion, we clarified key issues around my
+                        <strong>third pillar: exhibition design</strong>, coherence, and how the work should come
+                        together moving forward.
                     </p>
                 </div>
             </section>
